<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tool="http://schemas.android.com/tools"
              android:id="@+id/activity_main"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_margin="@dimen/activity_horizontal_margin"
              android:gravity="center"
              android:orientation="vertical">

    <EditText
        android:id="@+id/editTextEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Email address"/>

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Password"/>

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Login"/>

    <ProgressBar
        android:id="@+id/progressBarLoading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/textViewResponse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/buttonSpinnerExample"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_spinner_demo"/>

    <Button
        android:id="@+id/buttonListView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_list_view"/>

    <Button
        android:id="@+id/buttonRecyclerView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_recycler_view"/>

    <TextView
        android:id="@+id/textViewCounter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="40dp"
        tool:text="0"/>

    <Button
        android:id="@+id/buttonStartCounter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_start_counter"/>
</LinearLayout>
