<resources>
    <string name="app_name">TestingDemo</string>
    <string name="toast_valid_email">Email address is valid</string>
    <string name="toast_invalid_email">Email is invalid</string>
    <string name="button_spinner_demo">Spinner Demo</string>
    <string name="button_list_view">List view demo</string>
    <string name="action_add">Add</string>
    <string name="action_detail">Detail</string>
    <string name="action_description">Description</string>
    <string name="action_help">Help</string>
    <string name="button_start_counter">0 - 10 counter</string>
    <string name="toast_counter_started">Counter started</string>
    <string name="toast_counter_end">Counter end</string>
    <string name="button_recycler_view">Recycler view demo</string>
</resources>
