<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/actionAdd"
        android:icon="@drawable/ic_add"
        android:title="@string/action_add"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/actionDetail"
        android:title="@string/action_detail"
        app:showAsAction="collapseActionView"/>
    <item
        android:id="@+id/actionDescription"
        android:title="@string/action_description"
        app:showAsAction="collapseActionView"/>
    <item
        android:id="@+id/actionHelp"
        android:title="@string/action_help"
        app:showAsAction="collapseActionView"/>
</menu>